[package]
name = "zap"
version = "0.1.0"
authors = ["boB Rudis <bob@rud.is>"]
description = "Log Weatherflow Tempest Lightning Strikes"
readme = "README.md"
homepage = "https://rud.is/"
repository = "https://github.com/hrbrmstr/zap"
keywords = ["cli", "lightning", "weatherflow", "tempest"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = "0.4.19"

[[bin]]
bench = false
path = "src/main.rs"
name = "zap"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

